<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".access.PasswordRecoveryActivity"
    android:background="@color/primary"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/Contenido"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="35dp">

        <ImageView
            android:id="@+id/imageViewCenter"
            android:layout_width="105dp"
            android:layout_height="100dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:src="@drawable/logo_background"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/laila_bold"
                android:text="@string/Tiendita"
                android:textColor="@color/white"
                android:textSize="50sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-15dp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/abhaya_libre"
                android:text="@string/Brand"
                android:textColor="@color/white"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Contenido"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_top_corners"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearPrincipal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/password_recovery"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/alef"
            android:text="@string/password_message"
            android:textColor="@color/plomo_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/mail"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/line_inferior_text"
            android:hint="@string/tecsup_gmail_com"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/plomo_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/line_inferior_text"
            android:hint="@string/password_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/plomo_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/register_confirm_password"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/line_inferior_text"
            android:hint="@string/password_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/plomo_text"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/checkboxAccept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password_accept"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRecoveryPassword"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/alef_bold"
            android:text="@string/password_recovery_button"
            app:cornerRadius="30dp"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
