<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".access.LoginActivity"
    android:background="@color/primary"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/Contenido"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="35dp">

        <ImageView
            android:id="@+id/imageViewCenter"
            android:layout_width="105dp"
            android:layout_height="100dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:src="@drawable/logo_background"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/laila_bold"
                android:text="@string/Tiendita"
                android:textColor="@color/white"
                android:textSize="50sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-15dp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/abhaya_libre"
                android:text="@string/Brand"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Contenido"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_top_corners"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearPrincipal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:fontFamily="@font/alef"
            android:text="@string/welcome_message"
            android:textColor="@color/plomo_text"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/mail"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/line_inferior_text"
            android:hint="tecsup@gmail.com"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColor="@color/plomo_text"
            android:textSize="16sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="15sp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="5dp"
            android:background="@drawable/line_inferior_text"
            android:hint="Contraseña"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="@color/plomo_text"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btnRecoveryPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="@android:color/transparent"
            android:fontFamily="@font/poppins_semibold"
            android:paddingEnd="0dp"
            android:text="@string/password_forgot"
            android:textAllCaps="false"
            android:textColor="@color/primary"
            android:textSize="13sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/alef_bold"
            android:text="@string/login"
            app:cornerRadius="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp" />

        <LinearLayout
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp">

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="@color/plomo_text" />

            <TextView
                android:id="@+id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="0"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/o"
                android:textSize="16sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_weight="1"
                android:background="@color/plomo_text" />
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFaceboook"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/facebook"
            android:drawableLeft="@drawable/facebook_icon"
            android:fontFamily="@font/alef_bold"
            android:paddingStart="30dp"
            android:text="@string/use_facebook"
            app:cornerRadius="30dp"
            android:layout_gravity="center_horizontal"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGoogle"
            android:layout_width="320dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/primary_500"
            android:drawableLeft="@drawable/google_icon"
            android:fontFamily="@font/alef_bold"
            android:paddingStart="30dp"
            android:text="@string/use_google"
            app:cornerRadius="30dp"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
