<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".access.Confirmation_Password_Change"
    android:background="@color/primary"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/Contenido"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="35dp">

        <ImageView
            android:id="@+id/imageViewCenter"
            android:layout_width="105dp"
            android:layout_height="100dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:src="@drawable/logo_background"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/laila_bold"
                android:text="@string/Tiendita"
                android:textColor="@color/white"
                android:textSize="50sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-15dp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/abhaya_libre"
                android:text="@string/Brand"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Contenido"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/rounded_top_corners"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearPrincipal">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:src="@drawable/check_icon"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/password_recovery_succes"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/txtContenido"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/alef"
            android:textColor="@color/plomo_text"
            android:text="@string/password_recovery_succes_message"
            android:textSize="16sp"
            android:layout_marginBottom="50dp"
            android:gravity="center_horizontal"
            android:layout_gravity="center_horizontal"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRecoveryPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:backgroundTint="@color/black"
            android:fontFamily="@font/alef_bold"
            android:text="@string/login"
            app:cornerRadius="30dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>