<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".welcome.MainActivity"
    android:background="@color/primary"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/linearPrincipal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewCenter"
            android:layout_width="105dp"
            android:layout_height="100dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="2dp"
            android:src="@drawable/logo_background"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/laila_bold"
                android:text="@string/Tiendita"
                android:textColor="@color/white"
                android:textSize="50sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="-15dp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/abhaya_libre"
                android:text="@string/Brand"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="90dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:backgroundTint="@color/black"
            android:drawableLeft="@drawable/bag_primary"
            android:fontFamily="@font/alef_bold"
            android:paddingStart="40dp"
            android:paddingEnd="5dp"
            android:text="@string/login"
            app:cornerRadius="30dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegister"
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:text="@string/register"
            android:textColor="@color/black"
            android:backgroundTint="@color/white"
            android:drawableLeft="@drawable/bag_primary"
            android:fontFamily="@font/alef_bold"
            android:paddingStart="40dp"
            android:paddingEnd="5dp"
            app:cornerRadius="30dp"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>